src/pages/feedbacks/ListPage/components/Sidebar/style.scss
@use "sass:map";
@use "@/sass/abstract/" as *;

$header-height: 72px;
$content-margin: map.get($content-margin, "mobile");

.sidebar {
  height: 100%;
  max-width: 320px;
  width: min(80vw, 320px);
  position: absolute;
  right: 0;
  top: $header-height;
  background-color: map.get($colors, "white2");
  z-index: map.get($z-index, "popover");
  overflow: auto;

  &__content {
    margin-bottom: $header-height;
    padding: $content-margin $content-margin $header-height $content-margin;
  }

  &__item:not(:last-child) {
    margin-bottom: 24px;
  }

  &__overlay {
    height: calc(100% - $header-height);
    margin-top: $header-height;
  }

  &__brand {
    align-items: center;
    background: transparent
      url("@/assets/suggestions/mobile/background-header.png") no-repeat right
      top / cover;
    color: map.get($colors, "white1");
    display: flex;
    height: $header-height;
    justify-content: space-between;
    padding: 0 $content-margin;
    position: fixed;
    width: 100vw;
    z-index: map.get($z-index, "sticky");
    small {
      opacity: 0.75;
    }
  }

  &__toggle-btn {
    margin-right: 16px;
    @include touchscreen {
      margin-right: 0;
    }
  }
}

